# Pneumonia_diagnosis

./: CMakeLists.txt  Classifier.cpp  Classifier.h  README.md  dataset.cpp  dataset.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp
